# FaiVai

./: .gitignore  .ideas.txt.swp  DatabaseStructure.drawio  download.bat  ideas.txt  new_deploy_changes.sh  pull_changes.sh  run.bat  run_all.sh  stop_all.sh
API/: .env  .gitignore  .main.py.swp  config.py  database.db  database.py  docker-compose.yaml  initial_data.json  main.py  pyproject.toml  text.txt
API/auth/: models.py  routes.py  schemas.py  service.py
API/auth/templates/: reset_password.html  verification_email.html
API/categories/: models.py  routes.py  schemas.py
API/google_maps/: routes.py
API/offers/: models.py  routes.py  schemas.py
API/profile/: routes.py
API/profiles/: routes.py
API/reviews/: models.py
API/service_types/: models.py  routes.py  schemas.py
API/services/: models.py  routes.py  schemas.py
API/tests/: test_create_service.py
Front/: .gitignore  deploy.sh  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
Front/src/: App.jsx  index.css  main.jsx
Front/src/components/: Ava.jsx  DateFilter.jsx  Dote.jsx  Filter.jsx  FindWJ.jsx  FirstButton.jsx  JobIcon.jsx  LoadingUI.jsx  Logout.jsx  Menu.jsx  MenuItem.jsx  Navbar.jsx  NewServiceCard.jsx  OfferCard.jsx  OffersCardField.jsx  Rating.jsx  RatingStar.jsx  Review.jsx  Search.jsx  ServiceCard.jsx  ServiceCardField.jsx  Spinner.css  Spinner.jsx  TimeFilter.jsx  ZoneSelector.jsx
Front/src/context/: UserContext.jsx
Front/src/pages/: Admin.jsx  EmailVerified.jsx  FindJobs.jsx  FindService.jsx  FindWorker.jsx  FindWorkers.jsx  LogIn.jsx  (+10 more)
(+22 files in other folders)
