[tool.poetry]
package-mode = false
name = "faivaiapi"
version = "0.1.0"
description = ""
authors = ["Oleksandr Nazarevych <oleksandr.o.nazarevych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
fastapi = "^0.115.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.35"
passlib = "^1.7.4"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"
python-multipart = "^0.0.12"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
faker = "^30.3.0"
pytz = "^2024.2"
psycopg2-binary = "^2.9.10"
httpx = "^0.27.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
